--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
     <button onclick="loadData()">Load Data</button>
+    <button onclick="loadData2()">loadData2</button>
+    <button onclick="loadUsers()">loadUsers</button>
     <script src="./js File/fetch.js"></script>
+    <script src="./js File/app.js"></script>
 </body>
 
 </html>
