--- a/index.html
+++ b/index.html
@@ -11,8 +11,19 @@
     <button onclick="loadData()">Load Data</button>
     <button onclick="loadData2()">loadData2</button>
     <button onclick="loadUsers()">loadUsers</button>
+    <button onclick="loadUsers2()">loadUsers2</button>
+
+    <div class="users-container">
+        <ul id="users-list">
+
+        </ul>
+    </div>
+
+
+    <!-- script section -->
     <script src="./js File/fetch.js"></script>
     <script src="./js File/app.js"></script>
+    <script src="./js File/index.js"></script>
 </body>
 
 </html>
