--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <button onclick="loadData2()">loadData2</button>
     <button onclick="loadUsers()">loadUsers</button>
     <button onclick="loadUsers2()">loadUsers2</button>
+    <button onclick="createAPost()">Create A post</button>
+    <button onclick=" deleteAPost()">delete A post</button>
+    <button onclick="patchAPost()">Patch A post</button>
 
     <div class="users-container">
         <ul id="users-list">
