--- a/comments.html
+++ b/comments.html
@@ -10,6 +10,7 @@
 <body>
     <h2>Load Comments</h2>
     <button onclick="loadComments()">load Comments</button>
+    <button onclick="loadComments2()">Load Comments 2</button>
 
     <!-- script -->
     <script src="./js File/commnets.js"></script>
