added await fetch

--- a/await-fetch.html
+++ b/await-fetch.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <button>Fetch</button>
-    <button>Async Await</button>
+    <button onclick="loadUser()">Fetch</button>
+    <button onclick="loadUserAsync()">Async Await</button>
     <button>Arrow Async</button>
     <button>Async try Catch</button>
 
     <!-- script -->
-    <script src="./await.js"></script>
+    <script src="./js File/await-fetch.js"></script>
 </body>
 
 </html>
