added more async and await and promise

--- a/await-fetch.html
+++ b/await-fetch.html
@@ -10,8 +10,8 @@
 <body>
     <button onclick="loadUser()">Fetch</button>
     <button onclick="loadUserAsync()">Async Await</button>
-    <button>Arrow Async</button>
-    <button>Async try Catch</button>
+    <button onclick="loadUserArrow()">Arrow Async</button>
+    <button onclick="loadUserTryCatch()">loadUser Try Catch</button>
 
     <!-- script -->
     <script src="./js File/await-fetch.js"></script>
