--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
 
     <input id="product-name" type="text" placeholder="Product">
     <input id="product-quantity" type="text" placeholder="quantity">
-    <button>Add product</button>
+    <button class="btn" onclick="addProduct()">Add product</button>
 
     <!-- script -->
     <script src="./js File/cart.js"></script>
