--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,9 @@
     <input id="product-name" type="text" placeholder="Product">
     <input id="product-quantity" type="text" placeholder="quantity">
     <button class="btn" onclick="addProduct()">Add product</button>
+    <ul id="product-container">
 
+    </ul>
     <!-- script -->
     <script src="./js File/cart.js"></script>
 </body>
